Fix for background not stretching in height to fit screen

--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,6 @@ h1 {
 }
 
 body {
-	background: url(../img/back.jpg) Black;
-	background-size: cover
+	background: url(../img/back.jpg) Black no-repeat;
+	background-size: cover cover;
 }
